Ho lavorato a queste cose: - Creazione di una segnalazione da parte di un cittadino. - Modifica con enum dello stato della segnalazione da parte dell'ente associato. - Sistemate le rispettive eccezioni. - Sistema gli id e chiavi primarie. - Messo in ordine file openAPI.
